# SummarizerProject

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  FILE_STRUCTURE.md  GITHUB_PUBLISHING_GUIDE.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  RED_TAPING_TEST_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
.github/workflows/: tests.yml
examples/: __init__.py  advanced_usage.py  basic_usage.py  batch_processing.py
src/: __init__.py  agent.py  config.py  evaluation.py  metrics.py  utils.py
tests/: test_agent.py  test_evaluation.py  test_integration.py  test_metrics.py  test_red_taping.py
