# Project Configuration File for Summarizer Agent

[project]
name = "summarizer-agent"
version = "1.0.0"
description = "Production-grade AI Summarizer Agent with comprehensive evaluation"
authors = [
    { name = "AI Team", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "summarization", "evaluation", "deepeval", "openai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.42.0",
    "deepeval>=0.21.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/parasgor/SummarizerProject"
Documentation = "https://github.com/parasgor/SummarizerProject#readme"
Repository = "https://github.com/parasgor/SummarizerProject.git"
Issues = "https://github.com/parasgor/SummarizerProject/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
known_third_party = ["deepeval", "openai"]
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "api: Tests that call external APIs",
]
